# Zlog

./: README.md  Zlog.podspec
Zlog.xcodeproj/: project.pbxproj
Zlog.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Zlog.xcodeproj/xcshareddata/xcschemes/: ZlogDemo.xcscheme  czlog.xcscheme
ZlogDemo/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
ZlogDemo/Base.lproj/: Main.storyboard
ZlogDemo/FLEX/Classes/Manager/: FLEXManager.m
ZlogDemo/NSLog/: PWLogFileUtil.h  PWLogFileUtil.m
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/zhaohu/zlog/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  src
android/app/src/main/java/com/zhaohu/zlog/: MainActivity.java  Zlog.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/zhaohu/zlog/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
apple/: Zlog.h  Zlog.mm
decode/: decode_mars_crypt_log_file.py  decode_mars_nocrypt_log_file.py  gen_key.py
src/: appender.cc  appender.h  autobuffer.cc  autobuffer.h  czlog.cc  czlog.h  dir_util.c  dir_util.h  extract_util.c  extract_util.h  formater.h  logbuffe.cc  logbuffer.h  mmap_util.cc  mmap_util.h  mutex.h  ptrbuffer.cc  ptrbuffer.h  scopelock.cc  time_util.c  time_util.h  typedefine.h  zl_buffer.cc  zl_buffer.h  zl_crypt.cc  zl_crypt.h  zlcrypt.cc  zlcrypt.h  zlutils.c  zlutils.h
